--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,9 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.41"
+env_logger = "0.8.4"
+log = "0.4.14"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
+structopt = "0.3.21"
