--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2018"
 
 [dependencies]
 anyhow = "1.0.41"
+byteorder = "1.4.3"
 env_logger = "0.8.4"
 log = "0.4.14"
+num-derive = "0.3.3"
+num-traits = "0.2.14"
 serde = "1.0"
 serde_derive = "1.0"
 serde_json = "1.0"
