--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2018"
 [dependencies]
 anyhow = "1.0.41"
 byteorder = "1.4.3"
+cpp_demangle = "0.3.2"
 env_logger = "0.8.4"
 log = "0.4.14"
 num-derive = "0.3.3"
