--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ env_logger = "0.9.0"
 log = "0.4.14"
 num-derive = "0.3.3"
 num-traits = "0.2.14"
+rsprocmaps = "0.3.1"
 serde = "1.0.136"
 serde_derive = "1.0.136"
 serde_json = "1.0.79"
